@@ -121,6 +121,9 @@
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.4</version>
                <configuration>
+                 <forkCount>3</forkCount>
+    			 <reuseForks>true</reuseForks>
+    			 <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                   <suiteXmlFiles>
                      <suiteXmlFile>testng.xml</suiteXmlFile>
                   </suiteXmlFiles>
